--- a/docs/source/locale/ru/LC_MESSAGES/CSUI-Start.po
+++ b/docs/source/locale/ru/LC_MESSAGES/CSUI-Start.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CSUI\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-03-07 11:40+0700\n"
-"PO-Revision-Date: 2019-03-07 11:48+0700\n"
+"POT-Creation-Date: 2019-03-13 13:58+0700\n"
+"PO-Revision-Date: 2019-03-13 14:10+0700\n"
 "Last-Translator: \n"
 "Language: ru\n"
 "Language-Team: \n"
@@ -300,38 +300,59 @@ msgstr "Информация о технической поддержке при
 #: ../../CSUI-Start.rst:99
 msgid ""
 "A user can add the information on support services to all error messages to "
-"let users get assistance faster in case of a failure. Support information "
-"should be specified in the ``support-info.md`` file stored in a `special "
-"folder <https://github.com/bwsw/cloudstack-ui/tree/master/src/support>`_ of "
-"the project. It may include contacts e.g. phone numbers, emails or any other "
-"details."
+"let users get assistance faster in case of a failure. Support information may "
+"include contacts e.g. phone numbers, emails or any other details. It should be "
+"specified in the ``support-info.md`` file stored in a `special folder <https://"
+"github.com/bwsw/cloudstack-ui/tree/master/src/support>`_ of the project. We "
+"support localization of the file to Russian. As you see, there are two files "
+"in the folder:"
 msgstr ""
 "Пользователь может добавить информацию о службе поддержки во все сообщения об "
-"ошибках. Это позволит быстрее связаться со службой поддержки и получить помощь "
-"при возникновении ошибок. Информация должна быть указана в файле ``support-"
-"info.md``, который хранится в `специальной папке <https://github.com/bwsw/"
-"cloudstack-ui/tree/master/src/support>`_  проекта. Она может включать в себя "
-"контакнтые данные, например номера телефонов, адреса электронной почты или "
-"другие данные для быстрой связи со службой технической поддержки."
+"ошибках. Эта информация может включать в себя контакнтые данные, например "
+"номера телефонов, адреса электронной почты или другие данные для быстрой связи "
+"со службой технической поддержки. Это позволит быстрее связаться со службой "
+"поддержки и получить помощь при возникновении ошибок. Информация должна быть "
+"указана в файле ``support-info.md``, который хранится в `специальном каталоге "
+"<https://github.com/bwsw/cloudstack-ui/tree/master/src/support>`_  проекта. "
+"Поддерживается русская локализация файла. Как вы видите, в каталоге есть два "
+"файла:"
 
 #: ../../CSUI-Start.rst:101
 msgid ""
-"The specified support details will display under a drop-down menu. Click it in "
-"the error message window to expand it."
+"``support-info.md`` - the main file that contains contact details of the "
+"technical support team in English,"
+msgstr ""
+"``support-info.md`` - основной файл с контактными данными службы технической "
+"поддержки на английском языке,"
+
+#: ../../CSUI-Start.rst:103
+msgid "``support-info.ru.md`` - contains a Russian version of the main file."
+msgstr "``support-info.ru.md`` - русская версия основного файла."
+
+#: ../../CSUI-Start.rst:105
+msgid ""
+"If you use the prepared `Docker image <https://github.com/bwsw/cloudstack-"
+"ui#deployment>`_ to deploy the project, you should map your custom support "
+"information files via Docker-volume when running the container. For example: ::"
+msgstr ""
+"Если вы разворачиваете проект из `образа Docker <https://github.com/bwsw/"
+"cloudstack-ui#deployment>`_, отобразите подготовленные файлы через Docker-"
+"volume при запуске контейнера, например:"
+
+#: ../../CSUI-Start.rst:116
+msgid ""
+"The support details specified in the file will display under a drop-down menu. "
+"Click it in the error message window to expand."
 msgstr ""
 "Указанная контактная информация службы поддержки будет отображаться в "
 "раскрывающемся блоке \"Информация о технической поддержке\" в окне уведомления "
 "об ошибке. Развернуть его можно кликом на блок."
 
-#: ../../CSUI-Start.rst:105
-msgid "Localization of the file is supported."
-msgstr "Поддерживается локализация файла."
-
-#: ../../CSUI-Start.rst:108
+#: ../../CSUI-Start.rst:121
 msgid "Adding Custom Scripts"
 msgstr "Добавление пользовательских скриптов"
 
-#: ../../CSUI-Start.rst:110
+#: ../../CSUI-Start.rst:123
 msgid ""
 "We support adding custom JavaScript scripts to extend the UI functionality "
 "with the services necessary for a user.  For example, using custom scripts a "
@@ -341,7 +362,7 @@ msgstr ""
 "пользователя образом путем добавления пользовательских скриптов. Так, "
 "например, можно подключить виджеты JivoSite или Google Analytics."
 
-#: ../../CSUI-Start.rst:112
+#: ../../CSUI-Start.rst:125
 msgid ""
 "Custom scripts are added at running the CloudStack-UI Docker-container. All "
 "that a user should do is to define the ``/scripts/custom.js`` custom script "
@@ -353,7 +374,7 @@ msgstr ""
 "файла ``/scripts/custom.js`` и отобразить его через Docker-volume при запуске "
 "контейнера. По умолчанию файл  ``/scripts/custom.js`` пустой."
 
-#: ../../CSUI-Start.rst:114
+#: ../../CSUI-Start.rst:127
 msgid "As a result, you can see the added service in the UI:"
 msgstr ""
 "В результате, в UI появится добавленный сервис. На изображении ниже "
@@ -422,3 +443,6 @@ msgstr ""
 
 #~ msgid "By default, the ``/scripts/custom.js`` file is empty."
 #~ msgstr "По умолчанию, файл ``/scripts/custom.js`` пустой."
+
+#~ msgid "Localization of the file is supported."
+#~ msgstr "Поддерживается локализация файла."
