--- a/docs/source/locale/ru/LC_MESSAGES/CSUI-LogView.po
+++ b/docs/source/locale/ru/LC_MESSAGES/CSUI-LogView.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CSUI\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-03-13 16:22+0700\n"
-"PO-Revision-Date: 2019-03-13 16:24+0700\n"
+"POT-Creation-Date: 2019-03-13 17:23+0700\n"
+"PO-Revision-Date: 2019-03-13 17:24+0700\n"
 "Last-Translator: \n"
 "Language: ru\n"
 "Language-Team: \n"
@@ -34,8 +34,8 @@ msgstr "Общая информация"
 
 #: ../../CSUI-LogView.rst:13
 msgid ""
-"In the Virtual Machines-View Logs section a user can see VM logs. This section "
-"appears if the UI-plugin - Log View - is activated. This UI-plugin works "
+"In the *Virtual Machines*-*View Logs* section a user can see VM logs. This "
+"section appears if the UI-plugin - Log View - is activated. This UI-plugin works "
 "together with the backend API plugin developed to process and view virtual "
 "machine logs which are handled by ELK and delivered to the storage by Filebeat. "
 "The version of the backend API plugin matches Apache CloudStack version that it "
