--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -37,20 +37,20 @@
   },
   "DIALOG_MESSAGES": {
     "ACCOUNT": {
-      "CONFIRM_DELETION": "Are you sure you want to delete this account?",
-      "CONFIRM_DISABLE": "Are you sure you want to disable this account?",
-      "CONFIRM_ENABLE": "Are you sure you want to enable this account?",
-      "CONFIRM_LOCK": "Are you sure you want to lock this account?"
+      "CONFIRM_DELETION": "Confirm that you want to delete this account?",
+      "CONFIRM_DISABLE": "Confirm that you want to disable this account?",
+      "CONFIRM_ENABLE": "Confirm that you want to enable this account?",
+      "CONFIRM_LOCK": "Confirm that you want to lock this account?"
     },
     "ACCOUNT_USER": {
-      "CONFIRM_DELETION": "Are you sure you want to delete this user?",
-      "CONFIRM_EDIT": "Are you sure you want to edit this user?",
-      "CONFIRM_CHANGE_PASSWORD": "Are you sure you want to change password for this user?",
-      "CONFIRM_REGENERATE_KEY": "Are you sure you want to regenerate key for this user?"
+      "CONFIRM_DELETION": "Confirm that you want to delete this user?",
+      "CONFIRM_EDIT": "Confirm that you want to edit this user?",
+      "CONFIRM_CHANGE_PASSWORD": "Confirm that you want to change password for this user?",
+      "CONFIRM_REGENERATE_KEY": "Confirm that you want to regenerate key for this user?"
     },
     "ISO": {
-      "CONFIRM_DETACHMENT": "Are you sure you want to detach this ISO?",
-      "CONFIRM_DELETION": "Are you sure you want to delete this ISO?"
+      "CONFIRM_DETACHMENT": "Confirm that you want to detach this ISO?",
+      "CONFIRM_DELETION": "Confirm that you want to delete this ISO?"
     },
     "SNAPSHOT": {
       "CONFIRM_DELETION": "Are you sure you want to delete this snapshot?",
@@ -97,6 +97,7 @@
   "ERRORS": {
     "SUPPORT_INFORMATION": "Support information",
     "COMMON": {
+      "INTERNAL_ERROR": "Internal error",
       "THE_NAME_IS_TAKEN": "The name {{ val1 }} is taken"
     },
     "AUTH": {
@@ -106,7 +107,12 @@
       "DISABLED": "User {{ val1 }} (or their account) {{ val2 }} is disabled. Please contact the administrator."
     },
     "ISO": {
+      "INVALID_ISO": "Invalid ISO. Please specify valid URL.",
+      "DETACHMENT_FAILED": "Failed to detach an ISO",
       "VMS_IN_USE": "Unable to delete the ISO as it's used by the following VMs:<br>{{ vms }}"
+    },
+    "TEMPLATE": {
+      "INVALID_TEMPLATE": "Invalid template. Please specify valid URL."
     },
     "VM_SNAPSHOT": {
       "LIMIT_EXCEEDED": "The maximum amount of VM snapshots is exceeded. Please check your configurations"
@@ -116,13 +122,17 @@
       "CREATION_UNAVAILABLE_FOR_STOPPED": "VM snapshot creation is unavailable for stopped VMs",
       "CREATION_UNAVAILABLE_FOR_DELETED": "VM snapshot creation is unavailable for destroyed VMs",
       "CREATION_UNAVAILABLE": "VM snapshot can not be created. Contact your administrator",
+      "UNABLE_TO_REVERT_REMOVE_SNAPSHOTS": "Unable to revert snapshot for VM, please remove VM snapshots before reverting VM from snapshot",
+      "REVERT_UNAVAILABLE_FOR_DELETED": "Revert VM to snapshot is unavailable for destroyed VMs",
       "REVERT_UNAVAILABLE_FOR_STOPPED": "Revert VM to snapshot is unavailable for stopped VMs"
     },
     "SSH": {
+      "PUBLIC_KEY_INVALID": "Public key is invalid",
       "KEY_PAIR_ALREADY_EXISTS": "SSH key with name '{{ val1 }}' already exists"
     },
     "VM": {
-      "INSUFFICIENT_RESOURCES": "Insufficient resources"
+      "INSUFFICIENT_RESOURCES": "Insufficient resources",
+      "USER_DATA_TOO_BIG": "Maximum size of VM UserData is exceeded"
     },
     "VM_POST_ACTION": {
       "INVALID_URL": "Invalid URL. Please check values in VM tags"
@@ -136,6 +146,8 @@
       "VOLUME_RESOURCES_LIMIT_EXCEEDED": "The disk offering cannot be selected because it doesn't fit the account resources available",
       "VOLUME_DELETING_UNAVAILABLE": "Data disk deleting is unavailable for VMs with active snapshots",
       "VOLUME_ATTACH_UNAVAILABLE": "Data disk attachment is unavailable for VMs with active snapshots",
+      "VOLUME_ATTACH_UNAVAILABLE_FOR_DELETED": "Data disk attachment is unavailable for destroyed VMs",
+      "VOLUME_ATTACH_UNAVAILABLE_AS_MIGRATION_NOT_ALLOWED": "Data disk attachment is unavailable as migration of local data volume does not allowed",
       "VOLUME_DETACH_UNAVAILABLE": "Data disk detachment is unavailable for VMs with active snapshots",
       "VOLUME_RESIZE_UNAVAILABLE": "Data disk resize is unavailable for VMs with active snapshots",
       "VOLUME_COUNT_RESOURCE_LIMIT_EXCEEDED": "Maximum amount of disks is exceeded. Account Resource Limit is {{ val1 }}"
@@ -152,8 +164,10 @@
     },
     "RESOURCE_QUOTAS": {
       "FAILED_RETRIEVE": "You can not change any resource limits",
+      "FAILED_UPDATE": "You can not resource limit",
       "MAX_MUST_BE_GREATER": "Maximum must be greater than or equal to minimum",
-      "MAX_MUST_BE_BETWEEN": "Maximum must be between {{ val1 }} and {{ val2 }}"
+      "MAX_MUST_BE_BETWEEN": "Maximum must be between {{ val1 }} and {{ val2 }}",
+      "NO_BILLING_ID": "Billing Id doesn't specified for user"
     }
   },
   "NOTIFICATIONS": {
@@ -192,6 +206,7 @@
       "TAKE_FAILED": "Failed to take a snapshot",
       "DELETION_IN_PROGRESS": "Deleting a snapshot",
       "DELETION_DONE": "Snapshot deleted",
+      "DELETION_FAILED": "Failed to delete a snapshot",
       "REVERT_IN_PROGRESS": "Reverting a disk",
       "REVERT_DONE": "Disk reverted",
       "REVERT_FAILED": "Failed to revert a disk"
@@ -282,7 +297,10 @@
       "COLOR_CHANGE_DONE": "VM color changed",
       "CHANGE_SSH_IN_PROGRESS": "Changing an SSH-key",
       "CHANGE_SSH_DONE": "SSH-key changed",
-      "CHANGE_SSH_FAILED": "Failed to change an SSH-key"
+      "CHANGE_SSH_FAILED": "Failed to change an SSH-key",
+      "CHANGE_USER_DATA_IN_PROGRESS": "Changing VM UserData",
+      "CHANGE_USER_DATA_DONE": "VM UserData changed",
+      "CHANGE_USER_DATA_FAILED": "Failed to change VM UserData"
     },
     "VOLUME": {
       "DETACHMENT_IN_PROGRESS": "Detaching a volume",
@@ -332,7 +350,7 @@
     "SSH_KEYS": "SSH keys",
     "ACCOUNTS": "Accounts",
     "RESOURCE_QUOTAS": "Resource quotas",
-    "LOGS": "View logs",
+    "LOGS": "System logs",
     "SETTINGS": "Settings",
     "LOGOUT": "Logout",
     "LICENSE": {
@@ -355,7 +373,7 @@
       "WEB_SHELL": "WebShell",
       "VM_ACCESS": "Access VM",
       "VM_ACCESS_TITLE": "Virtual Machine",
-      "LOGS": "Log View",
+      "LOGS": "System Logs",
       "CREATE_VM_LOGS_TOKEN": "Create token",
       "INVALIDATE_VM_LOGS_TOKEN": "Invalidate token"
     },
@@ -411,7 +429,8 @@
         "TITLE": "Details",
         "ZONE": "Zone",
         "HOST_NAME": "VM host name",
-        "ID": "ID"
+        "ID": "ID",
+        "USER_DATA": "VM UserData"
       },
       "SECURITY_GROUP": {
         "STOP_MACHINE_FOR_SG": "You need to stop the virtual machine to change security group. Do you want to stop it now?",
@@ -631,6 +650,7 @@
       "NO_OFFERINGS": "There are no service offering available",
       "GENERAL": "General",
       "ADVANCED": "Advanced",
+      "USER_DATA": "VM UserData",
       "DETAILS": "Details",
       "REQUEST": "REQUEST",
       "PARAMS": "PARAMS",
@@ -648,6 +668,11 @@
         "DESCRIPTION": "Description",
         "DATE": "Date",
         "ACTIONS": "Actions"
+      },
+      "VM_USER_DATA": {
+        "TITLE": "VM UserData",
+        "USER_DATA": "VM UserData",
+        "NO_USER_DATA": "No VM UserData"
       }
     }
   },
@@ -1543,7 +1568,7 @@
       "NETWORK": "Network",
       "VPCS": "VPCs",
       "CPUS": "CPUs",
-      "MEMORY": "Memory (MB)",
+      "MEMORY": "Memory (GB)",
       "PRIMARY_STORAGE": "Primary storage (GB)",
       "SECONDARY_STORAGE": "Secondary storage (GB)"
     },
@@ -1638,7 +1663,7 @@
       "TITLE": "User Tags"
     },
     "VM_LOGS": {
-      "TITLE": "Log View (real-time mode)",
+      "TITLE": "System Logs (real-time mode)",
       "SHOW_LAST_MESSAGES": "Show last (messages)",
       "SHOW_LAST_MINUTES": "Show last (minutes)"
     }
@@ -1685,6 +1710,36 @@
       "DISK_READ_IOPS": "Disk read (IOPS)",
       "DISK_WRITE_IOPS": "Disk write (IOPS)",
       "DISK_IO_ERRORS": "Disk IO errors"
+    },
+    "INTERVALS": {
+      "RANGES": {
+        "15M": "15 m",
+        "30M": "30 m",
+        "1H": "1 h",
+        "2H": "2 h",
+        "3H": "3 h",
+        "4H": "4 h",
+        "12H": "12 h",
+        "1D": "1 d",
+        "1W": "1 w",
+        "30D": "30 d"
+      },
+      "AGGREGATIONS": {
+        "1M": "1 m",
+        "4M": "4 m",
+        "5M": "5 m",
+        "6M": "6 m",
+        "15M": "15 m",
+        "30M": "30 m",
+        "1H": "1 h",
+        "4H": "4 h",
+        "1D": "1 d"
+      },
+      "SHIFTS": {
+        "M": "m",
+        "H": "h",
+        "D": "d"
+      }
     }
   },
   "SECURITY_GROUP_SELECTOR": {
@@ -1844,16 +1899,29 @@
     }
   },
   "UNITS": {
+    "B": "B",
+    "KB": "KB",
+    "MB": "MB",
     "GB": "GB",
+    "TB": "TB",
+    "KIB": "KiB",
+    "MIB": "MiB",
+    "GIB": "GiB",
+    "TIB": "TiB",
+    "BITS": "bits",
+    "KBITS": "Kbits",
+    "MBITS": "Mbits",
+    "GBITS": "Gbits",
+    "TBITS": "Tbits",
     "GB_VALUE": "{{ value }} GB",
     "GHZ": "GHz",
     "IOPS": "IOPS",
     "IOPS_VALUE": "{{ value }} IO/s",
-    "MB": "MB",
     "MB_VALUE": "{{ value }} MB",
     "MBPS": "MB/s",
     "MBPS_VALUE": "{{ value }} MB/s",
-    "MHZ": "MHz"
+    "MHZ": "MHz",
+    "S": "s"
   },
   "VOLUME_ACTIONS": {
     "TAKE_SNAPSHOT": "Take a snapshot",
