--- a/docs/source/locale/ru/LC_MESSAGES/CSUI-LogView.po
+++ b/docs/source/locale/ru/LC_MESSAGES/CSUI-LogView.po
@@ -100,7 +100,7 @@ msgstr ""
 "виртуальной машины необходимо использовать секретный токен. Вы можете создать и "
 "скопировать новый токен через интерфейс. Токен может быть заново сгенерирован в "
 "случае компрометации. Более подробную информацию о том, как это сделать, можно "
-"найти в :ref:`VM_Actions`. Подробные инструкции о конфигурировании сервиса "
+"найти в разделе :ref:`VM_Actions`. Подробные инструкции о конфигурировании сервиса "
 "экспорта журналов в виртуальной машине представлены в `документации по плагину "
 "<https://github.com/bwsw/cloud-plugin-vm-logs#filebeat-63>`_."
 
