docs: more enhancements after review 1.411.29 (#1631)

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1663,7 +1663,7 @@
       "TITLE": "User Tags"
     },
     "VM_LOGS": {
-      "TITLE": "Log View (real-time mode)",
+      "TITLE": "System Logs (real-time mode)",
       "SHOW_LAST_MESSAGES": "Show last (messages)",
       "SHOW_LAST_MINUTES": "Show last (minutes)"
     }
