--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -1659,7 +1659,7 @@
       "TITLE": "Теги пользователя"
     },
     "VM_LOGS": {
-      "TITLE": "Просмотр логов (режим реального времени)",
+      "TITLE": "Системные журналы (режим реального времени)",
       "SHOW_LAST_MESSAGES": "Максимальное количество сообщений",
       "SHOW_LAST_MINUTES": "Показывать последние (минут)"
     }
