--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -274,9 +274,9 @@
       "RECOVER_IN_PROGRESS": "Идет восстановление ВМ",
       "RECOVER_DONE": "ВМ восстановлена",
       "RECOVER_FAILED": "Не удалось восстановить ВМ",
-      "DEPLOY_IN_PROGRESS": "Развертывание ВМ",
-      "DEPLOY_DONE": "ВМ развернута",
-      "DEPLOY_FAILED": "Не удалось развернуть ВМ",
+      "DEPLOY_IN_PROGRESS": "Выделение ВМ",
+      "DEPLOY_DONE": "ВМ выделена",
+      "DEPLOY_FAILED": "Не удалось выделить ВМ",
       "CHANGE_SERVICE_OFFERING_IN_PROGRESS": "Изменение вычислительного предложения",
       "CHANGE_SERVICE_OFFERING_DONE": "Вычислительное предложение изменено",
       "CHANGE_SERVICE_OFFERING_FAILED": "Не удалось изменить вычислительное предложение",
