--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -606,8 +606,8 @@
       "trafficType": "Тип трафика",
       "type": "Тип",
       "FIREWALL_RULES": "Правила брандмауэра",
-      "INGRESS": "Входящее",
-      "EGRESS": "Исходящее",
+      "INGRESS": "Входящий",
+      "EGRESS": "Исходящий",
       "ATTACH": "Прикрепить",
       "DETACH": "Открепить",
       "VIEW": "Просмотреть",
@@ -956,9 +956,9 @@
       "CIDR": "CIDR",
       "START_PORT": "Начальный порт",
       "END_PORT": "Конечный порт",
-      "INGRESS": "Входящее",
+      "INGRESS": "Входящий",
       "INGRESS_DISPLAY": "Входящий",
-      "EGRESS": "Исходящее",
+      "EGRESS": "Исходящий",
       "EGRESS_DISPLAY": "Исходящий",
       "TCP": "TCP",
       "UDP": "UDP",
