feature(time-zone): add searching for the selector

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1977,5 +1977,9 @@
     "NAME": "Name",
     "TYPE": "Type",
     "DESCRIPTION": "Description"
+  },
+  "SELECT_SEARCH": {
+    "SEARCH": "Search...",
+    "NO_MATCH": "no matching found"
   }
 }
