--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -708,7 +708,8 @@
       "GROUP_BY": "Group by",
       "GROUP_BY_ZONES": "Zones",
       "GROUP_BY_TYPES": "Types",
-      "GROUP_BY_ACCOUNTS": "Accounts"
+      "GROUP_BY_ACCOUNTS": "Accounts",
+      "SEARCH": "Search storage..."
     },
     "CARD": {
       "DESCRIPTION": "Description",
