refactor(snapshot-filter): move search box to navbar

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -879,7 +879,8 @@
       "GROUP_BY_TYPES": "Types",
       "GROUP_BY_VMS": "VMs",
       "GROUP_BY_ACCOUNTS": "Accounts",
-      "NO_VM": "No VM"
+      "NO_VM": "No VM",
+      "SEARCH": "Search snapshot..."
     },
     "SIDEBAR": {
       "DETAILS": "Details",
