refactor(template-filter): move search box to navbar

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -789,7 +789,8 @@
       "COMMUNITY": "Community",
       "SELFEXECUTABLE": "My",
       "ALL": "All",
-      "GENERAL": "General"
+      "GENERAL": "General",
+      "SEARCH": "Search Template/ISO..."
     },
     "CARD": {
       "DESCRIPTION": "Description",
