refactor(account-info): show more information

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -340,7 +340,7 @@
     "PASSWORD_REQUIRED": "Password is required"
   },
   "NAVIGATION_SIDEBAR": {
-    "WELCOME": "Welcome, {{ name }}",
+    "WELCOME": "Welcome, {{ firstname }} {{ lastname }}",
     "VMS": "Virtual machines",
     "CLOUD": "Cloud",
     "STORAGE": "Storage",
