--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -340,7 +340,7 @@
     "PASSWORD_REQUIRED": "Необходимо заполнить пароль"
   },
   "NAVIGATION_SIDEBAR": {
-    "WELCOME": "Здравствуйте, {{ name }}",
+    "WELCOME": "Здравствуйте, {{ firstname }}·{{ lastname }}",
     "VMS": "Виртуальные машины",
     "CLOUD": "Oблако",
     "STORAGE": "Хранилище",
