--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -30,6 +30,7 @@
     "VIEW": "Просмотреть",
     "YES": "Да",
     "SEARCH": "Поиск",
+    "SEARCH_PLACEHOLDER": "Поиск...",
     "CONTINUE": "Продолжить",
     "AGREE": "Принимаю",
     "NAME": "Имя",
@@ -340,7 +341,7 @@
     "PASSWORD_REQUIRED": "Необходимо заполнить пароль"
   },
   "NAVIGATION_SIDEBAR": {
-    "WELCOME": "Здравствуйте, {{ firstname }}·{{ lastname }}",
+    "WELCOME": "Здравствуйте, {{ firstname }} {{ lastname }}",
     "VMS": "Виртуальные машины",
     "CLOUD": "Oблако",
     "STORAGE": "Хранилище",
