fix(i18n): add translations for ru

--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -1973,5 +1973,9 @@
     "NAME": "Имя",
     "TYPE": "Тип",
     "DESCRIPTION": "Описание"
+  },
+  "SELECT_SEARCH": {
+    "SEARCH": "Поиск...",
+    "NO_MATCH": "Ничего не найдено"
   }
 }
