navbar & improve sidenav & responsive design (#1672)
* change nav style

* clean code

* change nav style

* change nav style

* change nav style

* fix visual problems

* fix(vm-api-log): css conflict with nav sidebar

* feature(index.html): add viewport to fit responsive layout

* fix(i18n): NAVIGATION_SIDEBAR.CLOUD translation error

* Revert proxy-conf-example.js

* feature(navbar): export getCurrentSubroute

* feature(nav-menu): change sidenav style to fit the navbar

* feature(shared/top-bar): remove button&notification-box from topbar

* feature(navbar): new navbar

* feature(shared/notification-box): move notification-box to the navbar and show last msg on the navbar

* feature(navbar): i18n for search box placeholder

* refactor(vm-filter): move search box to navbar

* refactor(volume-filter): move search box to navbar

* refactor(event-filter): move search box to navbar

* refactor(snapshot-filter): move search box to navbar

* refactor(template-filter): move search box to navbar

* refactor(sg-filter): move search box to navbar

* feature(shared/grouped-list): show cards center when a small screen

* feature(shared/sidebar): responsive design

* feature(shared/sidebar): use menu button of navbar

* clean(home): delete useless param

* refactor(account-info): show more information

* fix(i18n): improve translations

* fix(home): fix lint error

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -30,6 +30,7 @@
     "VIEW": "View",
     "YES": "Yes",
     "SEARCH": "Search",
+    "SEARCH_PLACEHOLDER": "Search...",
     "CONTINUE": "Continue",
     "AGREE": "I agree",
     "NAME": "Name",
@@ -340,8 +341,9 @@
     "PASSWORD_REQUIRED": "Password is required"
   },
   "NAVIGATION_SIDEBAR": {
-    "WELCOME": "Welcome, {{ name }}",
+    "WELCOME": "Welcome, {{ firstname }} {{ lastname }}",
     "VMS": "Virtual machines",
+    "CLOUD": "Cloud",
     "STORAGE": "Storage",
     "IMAGES": "Images",
     "SNAPSHOTS": "Snapshots",
