--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -27,7 +27,7 @@
     "STATUS": "Статус",
     "TYPE": "Тип",
     "UPDATE": "Обновить",
-    "VIEW": "Просмотреть",
+    "VIEW": "Посмотреть",
     "YES": "Да",
     "SEARCH": "Поиск",
     "SEARCH_PLACEHOLDER": "Поиск...",
@@ -612,7 +612,7 @@
       "EGRESS": "Исходящий",
       "ATTACH": "Прикрепить",
       "DETACH": "Открепить",
-      "VIEW": "Просмотреть",
+      "VIEW": "Посмотреть",
       "NO_SG": "Нет групп безопасности"
     },
     "VM_CREATION": {
