--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1983,5 +1983,9 @@
   "SELECT_SEARCH": {
     "SEARCH": "Search...",
     "NO_MATCH": "no matching found"
+  },
+  "HTTP_ACCESS": {
+    "UNREACHABLE": "VM is unreachable",
+    "SERVICE_DOWN": "Service may be unreachable"
   }
 }
