--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -1982,6 +1982,6 @@
   },
   "HTTP_ACCESS": {
     "UNREACHABLE": "ВМ недоступна",
-    "SERVICE_DOWN": "Служба может быть недоступна"
+    "SERVICE_DOWN": "Не удается проверить доступность сервиса"
   }
 }
