--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -1981,7 +1981,7 @@
     "NO_MATCH": "Ничего не найдено"
   },
   "HTTP_ACCESS": {
-    "UNREACHABLE": "ВМ недоступна",
+    "UNREACHABLE": "Ожидайте, удаленный HTTP сервис еще не доступен",
     "SERVICE_DOWN": "Не удается проверить доступность сервиса"
   }
 }
