Require vm UUID confirmation to delete the vm

--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -77,6 +77,7 @@
       "CONFIRM_RESTORE": "Вы уверены, что хотите переустановить виртуальную машину?",
       "CONFIRM_DESTROY": "Вы уверены, что хотите удалить виртуальную машину?",
       "CONFIRM_EXPUNGE": "Вы уверены, что хотите уничтожить виртуальную машину?<br><b>Эта операция необратима.</b>",
+      "CONFIRM_VM_ID": "Пожалуйста, введите <b>{{ vmId }}</b> для подтверждения.",
       "CONFIRM_RECOVER": "Вы уверены, что хотите восстановить эту виртуальную машину?",
       "CONFIRM_RESET_PASSWORD": "Вы уверены, что хотите сбросить пароль?<br>Если ваша виртуальная машина запущена, то она будет перезагружена.",
       "CONFIRM_DRIVES_DELETION": "Удалить диски с данными этой ВМ?",
