--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -77,6 +77,7 @@
       "CONFIRM_RESTORE": "Are you sure you want to reinstall this virtual machine?",
       "CONFIRM_DESTROY": "Are you sure you want to destroy this virtual machine?",
       "CONFIRM_EXPUNGE": "Are you sure you want to expunge this virtual machine?<br><b>This cannot be undone.</b>",
+      "CONFIRM_VM_ID": "Please type <b>{{ vmId }}</b> to confirm.",
       "CONFIRM_RECOVER": "Are you sure you want to recover this virtual machine?",
       "CONFIRM_RESET_PASSWORD": "Are you sure you want to reset password?<br>If your Virtual Machine is running it will be rebooted.",
       "CONFIRM_DRIVES_DELETION": "Delete this VM's data drives?",
