--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -1572,11 +1572,11 @@
       "SECONDARY_STORAGE": "Дополнительное хранилище (ГБ)"
     },
     "REQUEST": {
-      "REQUEST_RESOURCES_BUTTON": "Запросить ресурсы",
-      "REQUEST_RESOURCES_TITLE": "Запросить ресурсы",
+      "REQUEST_RESOURCES_BUTTON": "Запросить/Освободить ресурсы",
+      "REQUEST_RESOURCES_TITLE": "Запросить/Освободить ресурсы",
       "LIMIT_UPDATED": "Лимиты ресурсов успешно изменены",
       "CAN_NOT_CHANGE_RESOURCES": "Вы не можете выполнить ни один запрос изменения лимитов ресурсов",
-      "REQUEST_BUTTON": "Запросить"
+      "REQUEST_BUTTON": "Подтвердить"
     },
     "ADMIN_PAGE": {
       "QUOTA_UPDATED": "Квоты ресурсов успешно изменены",
