Revert "add Force Stop option for stop vm command (#1687)"
This reverts commit 4b996990e86e2f77999b43dcf8341504210a7b67.

--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -82,8 +82,7 @@
       "CONFIRM_RESET_PASSWORD": "Вы уверены, что хотите сбросить пароль?<br>Если ваша виртуальная машина запущена, то она будет перезагружена.",
       "CONFIRM_DRIVES_DELETION": "Удалить диски с данными этой ВМ?",
       "CONFIRM_SAVE_PASSWORD": "Вы бы хотели автоматически сохранять пароли для всех ВМ?",
-      "CONFIRM_AFFINITY_DELETION": "Вы уверены, что хотите удалить аффинитетную группу?",
-      "FORCE_STOP": "Принудительно"
+      "CONFIRM_AFFINITY_DELETION": "Вы уверены, что хотите удалить аффинитетную группу?"
     },
     "SECURITY_GROUPS": {
       "CONFIRM_EDIT_FROM_VM": "Эта группа - разделяемая. Другие виртуальные машины, которые её используют, так же будут затронуты. Вы уверены, что хотите изменить правила группы в разделе Брандмауэр?",
