disable detach button of the last firewall rule

--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -618,6 +618,7 @@
       "EGRESS": "Исходящий",
       "ATTACH": "Прикрепить",
       "DETACH": "Открепить",
+      "CANNOT_DETACH": "Нельзя открепить последнее правило",
       "VIEW": "Посмотреть",
       "NO_SG": "Нет групп безопасности"
     },
