--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -618,6 +618,7 @@
       "EGRESS": "Outgoing",
       "ATTACH": "Attach",
       "DETACH": "Detach",
+      "CANNOT_DETACH": "Cannot detach the last rule",
       "VIEW": "View",
       "NO_SG": "No security group"
     },
