--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -618,7 +618,7 @@
       "EGRESS": "Исходящий",
       "ATTACH": "Прикрепить",
       "DETACH": "Открепить",
-      "CANNOT_DETACH": "Нельзя открепить последнее правило",
+      "CANNOT_DETACH": "Нельзя открепить последнюю группу правил",
       "VIEW": "Посмотреть",
       "NO_SG": "Нет групп безопасности"
     },
