add date range to snapshot filters

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -882,7 +882,8 @@
       "SELECT_ACCOUNTS": "Select accounts",
       "SELECT_TYPES": "Select types",
       "SELECT_VMS": "Select VMs",
-      "SELECT_DATE": "Select a date",
+      "SELECT_START_DATE": "Select start date",
+      "SELECT_END_DATE": "Select end date",
       "GROUP_BY_TYPES": "Types",
       "GROUP_BY_VMS": "VMs",
       "GROUP_BY_ACCOUNTS": "Accounts",
