--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -882,7 +882,8 @@
       "SELECT_ACCOUNTS": "Выберите аккаунты",
       "SELECT_TYPES": "Выберите типы",
       "SELECT_VMS": "Выберете ВМ",
-      "SELECT_DATE": "Выберите дату",
+      "SELECT_START_DATE": "Начальная дата",
+      "SELECT_END_DATE": "Конечная дата",
       "GROUP_BY_TYPES": "Типам",
       "GROUP_BY_VMS": "ВМ",
       "GROUP_BY_ACCOUNTS": "Аккаунтам",
