--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -75,7 +75,8 @@
       "CONFIRM_STOP": "Вы уверены, что хотите остановить виртуальную машину?",
       "CONFIRM_REBOOT": "Вы уверены, что хотите перезапустить виртуальную машину?",
       "CONFIRM_RESTORE": "Вы уверены, что хотите переустановить виртуальную машину?",
-      "REMOVE_SNAPSHOTS": "Пожалуйста, удалите снимки ВМ перед переустановкой",
+      "REMOVE_SNAPSHOTS_REINSTALL": "Пожалуйста, удалите снимки ВМ перед переустановкой",
+      "REMOVE_SNAPSHOTS_SO": "Пожалуйста, удалите снимки ВМ перед изменением вычислительного предложения",
       "CONFIRM_DESTROY": "Вы уверены, что хотите удалить виртуальную машину?",
       "CONFIRM_EXPUNGE": "Вы уверены, что хотите уничтожить виртуальную машину?<br><b>Эта операция необратима.</b>",
       "CONFIRM_VM_ID": "Пожалуйста, введите <b>{{ vmId }}</b> для подтверждения.",
