--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1920,7 +1920,7 @@
     "MIB": "MiB",
     "GIB": "GiB",
     "TIB": "TiB",
-    "BITS": "bits",
+    "BITS": "Bits",
     "KBITS": "Kbits",
     "MBITS": "Mbits",
     "GBITS": "Gbits",
