--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -1916,7 +1916,7 @@
     "MIB": "МиБ",
     "GIB": "ГиБ",
     "TIB": "ТиБ",
-    "BITS": "бит",
+    "BITS": "Бит",
     "KBITS": "КБит",
     "MBITS": "МБит",
     "GBITS": "ГБит",
