--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -1692,7 +1692,7 @@
   "ACCOUNT_NOT_FOUND": "Аккаунт не найден",
   "PULSE": {
     "PULSE": "Pulse",
-    "DIALOG_TITLE": "Плагин Pulse",
+    "DIALOG_TITLE": "Монитор использования ресурсов VM",
     "CPU_RAM": "ЦП / ОЗУ",
     "NETWORK": "Сеть",
     "DISK": "Диск",
@@ -1705,18 +1705,18 @@
     "LABELS": {
       "CPU": "ЦП",
       "RAM": "ОЗУ",
-      "NETWORK_READ": "Прочитано по сети",
-      "NETWORK_WRITE": "Отправлено по сети",
-      "NETWORK_READ_PACKETS": "Прочитано по сети (пакетов)",
-      "NETWORK_WRITE_PACKETS": "Отправлено по сети (пакетов)",
+      "NETWORK_READ": "Прочитано по сети (Мбит/с)",
+      "NETWORK_WRITE": "Отправлено по сети (Мбит/с)",
+      "NETWORK_READ_PACKETS": "Прочитано из сети (Пакеты/c)",
+      "NETWORK_WRITE_PACKETS": "Отправлено в сеть (Пакеты/c)",
       "NETWORK_READ_DROPS": "Потери при чтении",
       "NETWORK_WRITE_DROPS": "Потери при записи",
       "NETWORK_READ_ERRORS": "Ошибки при чтении",
       "NETWORK_WRITE_ERRORS": "Ошибки при записи",
-      "DISK_READ": "Чтение с диска",
-      "DISK_WRITE": "Запись на диск",
-      "DISK_READ_IOPS": "Чтение с диска (IOPS)",
-      "DISK_WRITE_IOPS": "Запись на диск (IOPS)",
+      "DISK_READ": "Чтение с диска (МБ/с)",
+      "DISK_WRITE": "Запись на диск (МБ/с)",
+      "DISK_READ_IOPS": "Чтение с диска (IO/с)",
+      "DISK_WRITE_IOPS": "Запись на диск (IO/с)",
       "DISK_IO_ERRORS": "Ошибки IO"
     },
     "INTERVALS": {
