--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -124,6 +124,7 @@
     },
     "SNAPSHOT": {
       "LIMIT_EXCEEDED": "Лимит снимков превышен. Для создания новых снимков Вам необходимо удалить какие-либо из ранее созданных снимков.",
+      "STORAGE_EXCEEDED": "Для создания снимка необходимо {{ required }} GiB дискового пространства, но только {{ available }} GiB доступно в дополнительном хранилище.",
       "CREATION_UNAVAILABLE_FOR_STOPPED": "Создание снимков ВМ недоступно для остановленных ВМ",
       "CREATION_UNAVAILABLE_FOR_DELETED": "Создание снимков ВМ недоступно для удаленных ВМ",
       "CREATION_UNAVAILABLE": "Снимок ВМ не может быть создан. Обратитесь к администратору",
